--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -6,7 +6,8 @@
   "categories": {
     "nature": "自然",
     "rain": "雨声",
-    "city": "城市"
+    "city": "城市",
+    "animals": "动物"
   },
   "sounds": {
     "forest-birds": "森林鸟鸣",
