--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "FreeMind White Noise",
+    "title": "StayFocused White Noise",
     "description": "Focus and relax with ambient sounds"
   },
   "controls": {
