--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "FreeMind 白噪音",
+    "title": "StayFocused 白噪音",
     "description": "专注和放松的环境音效"
   },
   "controls": {
